# sts-project

./: .gitignore  AGENTS.md  README.md  main.py  setup_vm.sh
agents/: agent_output.txt  package-lock.json  package.json  tsconfig.json
agents/src/: index.ts
agents/src/agents/: agent.test.ts  agent.ts  data-flow.ts  kv.ts  policies.ts  policy.ts  prompts.ts  tool.ts
models/: .gitignore  README.md  main.py  pyproject.toml  setup.sh
models/attention-tracker/detector/: dectector.py  model.py  utils.py
models/attention-tracker/result/: qwen2.5-attn_logs.json
models/attention/configs/: qwen2.5-attn.json
models/attention/detector/: eval_detector.py  find_attention_heads.py
models/drift-tracker/: activations.py  experiments.py  generate.py  mass-mean-probe.py  regression-probe.py  run.sh  t-sne.py  test_activations.py  umap.py  utils.py
models/probe/: activations.py  generate.py  mass-mean-probe.py  pca.py  probe.py  regression-probe.py  t-sne.py  utils.py
models/probe/dataset/: injection_trigger_test.txt  injection_trigger_train.txt
models/probes/attention/: eval_detector.py  find_attention_heads.py  model.py
models/probes/result/: qwen2.5-attn_result.jsonl
models/probes/results/: qwen2.5-attn.txt  qwen2.5-attn_deepset.json
models/result/deepset/prompt-injections/: result.jsonl
models/src/: main.py
notebooks/: 0_dataset_generation.ipynb  1_dataset_generation.ipynb  2_activation_extraction.py
results/: gpt-5_explicit_injection_tasks.json  gpt-5_subtle_injection_tasks.json  hotpotqa_samples.json  sampled_examples.csv  wiki_samples.json
(+11 files in other folders)
