[project]
name = "sts-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentdojo>=0.1.34",
    "nanogcg>=0.3.0",
    "transformer-lens>=2.15.4",
    "pandas>=2.0.0",
    "datasets>=2.14.0",
    "openai>=1.0.0",
    "ipykernel>=6.30.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
]
