[project]
name = "sts-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentdojo>=0.1.34",
    "nanogcg>=0.3.0",
    "transformer-lens>=2.15.4",
    "pandas>=2.0.0",
    "datasets>=2.14.0",
    "openai>=1.0.0",
    "ipykernel>=6.30.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "black>=25.9.0",
    "numpy>=2.3.3",
    "tqdm>=4.67.1",
    "torch>=2.8.0",
    "pytest>=8.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "vastai>=0.2.8",
    "umap-learn>=0.5.9.post2",
    "plotly>=6.3.1",
]

[tool.black]
line-length = 88
target-version = ['py311']
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
